# arena-unifei-hydro-ros-pkg

./: CMakeLists.txt  package.xml
action/: Align.action  Follow.action  Grab.action  Move.action  Rotate.action  Store.action  Translate.action
include/br/edu/unifei/expertinos/clients/: Align.h  Client.h  Follow.h  Grab.h  Move.h  Rotate.h  Store.h  Translate.h
include/br/edu/unifei/expertinos/servers/: Align.h  Follow.h  Grab.h  Move.h  Rotate.h  Server.h  Store.h  Translate.h
include/br/edu/unifei/expertinos/states/: AlignDistances.h  AlignModes.h  AlignStates.h  Colors.h  FollowModes.h  FollowStates.h  GrabStates.h  MovePathModes.h  MoveStates.h  MoveVelocityModes.h  RotateStates.h  TranslateStates.h
